Removed the line to replace '|' with ':' since that's already replaced in the string and it replaces partial characters in multi-byte characters, bug 68993, r=ducarroz, sr=sspitzer.